--- a/application.yml
+++ b/application.yml
@@ -6,3 +6,5 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     hostname: localhost
+global:
+  dynamic: configuration-server-setting
